first cut, it does what is supposed to. Needs a lot of cosmetics

--- a/graph/setup.cfg
+++ b/graph/setup.cfg
@@ -14,8 +14,8 @@ classifier =
 
 [entry_points]
 # Add here console scripts like:
-# console_scripts =
-#     script_name = graph.module:function
+console_scripts =
+    graphFeaturedChannels = graph.youtube:_graphFeaturedChannels
 # For example:
 # console_scripts =
 #     fibonacci = graph.skeleton:run
