Defined classes for nodes and edges Counted inward edges and scaled node image according to logarithm of them. Needs cleaning of old procedural code.

--- a/graph/setup.cfg
+++ b/graph/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = graph
-summary = Add a short description here!
+summary = Youtube craler
 author = poijqwef
 author-email = pqowiejf@gmail.com
 license = none
